# ufo-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  cli.py  config.py  dashboard.py  discovery.py  executor.py  identity.py  protocol.py  relay_client.py  runtime.py  storage.py  tray.py
packaging/: entry_agent.py  make_icon.py  ufo-agent.iss
tests/: test_cli.py  test_executor.py
web/: index.html
