[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ufo-agent"
version = "0.0.1"
description = "Windows device agent: pair a PC to a UFO control plane and let a remote AI use it, with local approval and always-visible activity."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "websockets>=12.0",
    "pystray>=0.19",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
ufo-agent = "agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
line-length = 120
target-version = "py311"
